--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,12 @@
 			<version>1.1</version>
 <!-- 			<scope>provided</scope> -->
 		</dependency>
+		
+		<dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>[4.0,)</version>
+       </dependency>
 
 		<!-- -->
 
