Kim Jeong Min/ admin 상품목록 검색 관련 작업 중

--- a/pom.xml
+++ b/pom.xml
@@ -267,8 +267,10 @@
            <version>[4.0,)</version>
        </dependency>
 
-		<!-- -->
-
+		<!-- 디버깅을 위한 SQL 찍어주는 용도 -->
+		<dependency>
+			<groupId>org.lazyluke</groupId> <artifactId>log4jdbc-remix</artifactId> <version>0.2.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
