--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,13 @@
            <version>[4.0,)</version>
        </dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
+
 		<!-- 디버깅을 위한 SQL 찍어주는 용도 -->
 		<dependency>
 			<groupId>org.lazyluke</groupId> <artifactId>log4jdbc-remix</artifactId> <version>0.2.7</version>
